Añadidos MUCHOS aligns pa fixear el footer Editada la implementación del footer y mejorado el diseño

--- a/assets/style.css
+++ b/assets/style.css
@@ -29,6 +29,10 @@ p {
 f {
   color: white;
   text-align: center;
+  align-items: center;
+  align-content: center;
+  align-self: center;
+  align-tracks: center;
   font-size: 10;
   font-family: "Tilt Neon", sans-serif;
 }
